[package]
name = "lau-spectral-zeta"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-spectral-zeta"
description = "Spectral zeta function of the agent — heat trace, functional equation, regularized dimension, determinant, and Riemann hypothesis analogue for agent stability"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
